Try to avoid packing .asar.unpacked files into the asar, doing something that doesn't work because the asar format obviously also has offsets for each file that need to be correct

--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@electron/asar": "^3.2.4"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@electron/asar@3.2.4": "patches/@electron__asar@3.2.4.patch"
+    }
   }
 }
