--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-trashfire-repair",
+  "name": "electron-repair",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
